test funcionales porfin